# text2ioc

./: .cruft.json  .gitignore  AUTHORS.md  Cargo.toml  Dockerfile  HISTORY.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml  wheels.yml
benchmarks/: benchmark_extract.py
src/: lib.rs
tests/: __init__.py  oracle_ioc.py  test_ioc.py  test_parity.py
text2ioc/: __init__.py  ioc.py
text2ioc/core/: __init__.py
