[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "test2ioc"
version = "0.1.0"
description = "Extract Indicators of Compromise (IOCs) from unstructured text."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Juan Manuel Cristóbal Moreno", email = "juanmcristobal@gmail.com" },
]
dependencies = ["requests>=2.31.0"]
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
]

[project.urls]
Homepage = "https://github.com/juanmcristobal/text2ioc"

[tool.maturin]
bindings = "pyo3"
module-name = "text2ioc._native"
python-source = "."
